--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header>
       <!-- logo -->
       <a href="#">
-        <img src="/images/logo.png" />
+        <img src="./images/logo.png" />
         <h2>Tien Store</h2>
       </a>
       <div>
