--- a/index-1.html
+++ b/index-1.html
@@ -9,8 +9,22 @@
     />
     <title>Tailwind</title>
     <link href="./css/tailwind/output.css" rel="stylesheet" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://unpkg.com/flowbite@1.4.0/dist/flowbite.min.css"
+    /> -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
   </head>
   <body>
+    <!-- header -->
     <header class="max-w-screen-xl m-auto p-4">
       <div class="fij">
         <!-- logo -->
@@ -82,5 +96,230 @@
         </ul>
       </section>
     </header>
+    <!-- main -->
+    <main class="max-w-screen-xl m-auto p-4">
+      <!-- START: slider -->
+      <div class="owl-carousel owl-carousel-basic owl-theme">
+        <div class="item">
+          <img
+            src="./images/sliders/1.jpeg"
+            class="block w-full aspect-video"
+            alt="..."
+          />
+        </div>
+        <div class="item">
+          <img
+            src="./images/sliders/2.jpeg"
+            class="block w-full aspect-video"
+            alt="..."
+          />
+        </div>
+        <div class="item">
+          <img
+            src="./images/sliders/3.jpeg"
+            class="block w-full aspect-video"
+            alt="..."
+          />
+        </div>
+      </div>
+      <!-- END: slider -->
+      <!-- START: san pham moi -->
+      <!-- title -->
+      <div class="fij">
+        <h1 class="font-bold text-xl mb-4">Sản phẩm mới</h1>
+        <a class="text-lg" href="#">Xem thêm</a>
+      </div>
+
+      <!-- ✅ Grid Section - Starts Here 👇 -->
+      <section
+        class="mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5"
+      >
+        <!--   ✅ Product card 1 - Starts Here 👇 -->
+        <div
+          class="bg-white w-full shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+        >
+          <a href="#">
+            <img
+              src="https://images.unsplash.com/photo-1646753522408-077ef9839300?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NjZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              alt="Product"
+              class="h-80 w-full object-cover rounded-t-xl"
+            />
+            <div class="px-4 py-3">
+              <span class="text-gray-400 mr-3 uppercase text-xs"
+                >Brand</span
+              >
+              <p
+                class="text-lg font-bold text-black truncate block capitalize"
+              >
+                Product Name
+              </p>
+              <div class="flex items-center">
+                <p
+                  class="text-lg font-semibold text-black cursor-auto my-3"
+                >
+                  $149
+                </p>
+                <del>
+                  <p class="text-sm text-gray-600 cursor-auto ml-2">
+                    $199
+                  </p>
+                </del>
+                <div class="ml-auto">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    fill="currentColor"
+                    class="bi bi-bag-plus"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z"
+                    />
+                    <path
+                      d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!--   🛑 Product card 1 - Ends Here  -->
+
+        <!--   ✅ Product card 2 - Starts Here 👇 -->
+        <div
+          class="bg-white w-full shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+        >
+          <a href="#">
+            <img
+              src="https://images.unsplash.com/photo-1651950537598-373e4358d320?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MjV8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              alt="Product"
+              class="h-80 w-full object-cover rounded-t-xl"
+            />
+            <div class="px-4 py-3">
+              <span class="text-gray-400 mr-3 uppercase text-xs"
+                >Brand</span
+              >
+              <p
+                class="text-lg font-bold text-black truncate block capitalize"
+              >
+                Product Name
+              </p>
+              <div class="flex items-center">
+                <p
+                  class="text-lg font-semibold text-black cursor-auto my-3"
+                >
+                  $149
+                </p>
+                <del>
+                  <p class="text-sm text-gray-600 cursor-auto ml-2">
+                    $199
+                  </p>
+                </del>
+                <div class="ml-auto">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    fill="currentColor"
+                    class="bi bi-bag-plus"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z"
+                    />
+                    <path
+                      d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!--   🛑 Product card 2 - Ends Here  -->
+
+        <!--   ✅ Product card 3 - Starts Here 👇 -->
+        <div
+          class="bg-white w-full shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+        >
+          <a href="#">
+            <img
+              src="https://images.unsplash.com/photo-1651950519238-15835722f8bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mjh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              alt="Product"
+              class="h-80 w-full object-cover rounded-t-xl"
+            />
+            <div class="px-4 py-3">
+              <span class="text-gray-400 mr-3 uppercase text-xs"
+                >Brand</span
+              >
+              <p
+                class="text-lg font-bold text-black truncate block capitalize"
+              >
+                Product Name
+              </p>
+              <div class="flex items-center">
+                <p
+                  class="text-lg font-semibold text-black cursor-auto my-3"
+                >
+                  $149
+                </p>
+                <del>
+                  <p class="text-sm text-gray-600 cursor-auto ml-2">
+                    $199
+                  </p>
+                </del>
+                <div class="ml-auto">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    fill="currentColor"
+                    class="bi bi-bag-plus"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z"
+                    />
+                    <path
+                      d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
+                    />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!--   🛑 Product card 3 - Ends Here  -->
+      </section>
+
+      <!-- 🛑 Grid Section - Ends Here -->
+
+      <!-- END: san pham moi -->
+    </main>
   </body>
 </html>
+<!-- <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script> -->
+
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+<script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+
+<script>
+  $(document).ready(function () {
+    $('.owl-carousel-basic').owlCarousel({
+      autoplay: true,
+      center: true, // true，下面的點點＝總數量
+      margin: 15,
+      autoplayTimeout: 2000,
+      loop: true, // 數量不夠時，可以取用到第一個
+      nav: false, // 是否，顯示< >圖標
+      items: 1,
+    });
+  });
+</script>
