--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
       class="relative bg-cover bg-no-repeat bg-center"
       style="
         min-height: 400px;
-        background-image: url('http://127.0.0.1:5501/images/sliders/2.jpeg');
+        background-image: url('./images/sliders/2.jpeg');
       "
       title="Bali, Indonesia"
     >
