--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
             <!-- menu -->
             <ul class="menu">
               <li>
-                <a href="#" class="text-blue-500">Trang chủ</a>
+                <a href="./index.html" class="text-blue-500"
+                  >Trang chủ</a
+                >
               </li>
               <li>
-                <a href="#">Giới thiệu</a>
+                <a href="./gioi-thieu.html">Giới thiệu</a>
               </li>
               <li>
-                <a href="#">Sản phẩm</a>
+                <a href="./list-sanpham.html">Sản phẩm</a>
               </li>
               <li>
-                <a href="#">Liên hệ</a>
+                <a href="./lien-he.html">Liên hệ</a>
               </li>
             </ul>
             <!-- dangnhap -->
@@ -91,7 +93,7 @@
             <a href="#">Sản phẩm</a>
           </li>
           <li>
-            <a href="#">Liên hệ</a>
+            <a href="./lien-he.html">Liên hệ</a>
           </li>
         </ul>
       </section>
