--- a/product-detail.html
+++ b/product-detail.html
@@ -325,9 +325,9 @@
                     </select>
                   </div>
 
-                  <button type="button" class="btn">
+                  <a href="./cart.html" class="btn fij">
                     Thêm vào giỏ hàng
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
